# num

./: CMakeLists.txt  Dockerfile  README.md  apply_and_build.sh  recover_data.py  requirements.txt  run_all_benchmarks.sh
python/: benchmark_cg.py  benchmark_spmv.py  matrix_generators.py  plot_comprehensive.py  plot_results.py  verify_accuracy.py
src/: batch_spmv_kernel.hpp  bindings.cpp  cg_solver.hpp  crs_matrix.hpp  dist_spmv.hpp  halo_exchange.hpp  mpi_singleton.hpp  spmv_kernel.hpp  vec_ops.hpp
tests/: test_accuracy.py  test_cg.cpp  test_halo_exchange.py  test_spmv_kernel.cpp
